added github links

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
         <span>Current time in Phanat Nikhom, Chon Buri. (Camera time has 30 seconds delay)</span>
         <h2 id="time"></h2>
+
+        <div class="links">
+            Github: <a href="https://github.com/WinsDominoes/bulb.winscloud.net">https://github.com/WinsDominoes/bulb.winscloud.net</a>
+        </div>
     </div>
     
     <script>
